--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tpls/primme"]
 	path = tpls/primme
-	url = git@github.com:jeremy-myers/primme.git
+	url = https://github.com/primme/primme.git
