--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,12 @@
 [submodule "tpls/primme"]
 	path = tpls/primme
-	url = https://github.com/primme/primme.git
+	url = https://github.com/jeremy-myers/primme.git
 [submodule "tpls/googletest"]
 	path = tpls/googletest
 	url = https://github.com/google/googletest.git
+[submodule "tpls/kokkos"]
+	path = tpls/kokkos
+	url = https://github.com/kokkos/kokkos
+[submodule "tpls/kokkos-kernels"]
+	path = tpls/kokkos-kernels
+	url = https://github.com/kokkos/kokkos-kernels.git
