Attempting inline build of primme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,44 +1,67 @@
 cmake_minimum_required(VERSION 3.20)
-project(skema)
+
+#---- Declaring the project name will define ${Skema_SOURCE_DIR} to be
+#---- the path to this source file, and ${Skema_BINARY_DIR} to be the path
+#---- to the directory where cmake has been invoked.
+project(Skema VERSION "1.0.0")
 
 
 # Add primme build with specific commit to eloy/index-conv-test-fun
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-set(INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/include/")
-set(INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/tpls/primme/include")
+# set(INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/include/")
+# set(INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/tpls/primme/include")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${skema_BINARY_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${skema_BINARY_DIR}/bin)
 
-# Target definitions
-add_executable(${PROJECT_NAME}
-    ${CMAKE_SOURCE_DIR}/driver/main.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_AlgParams.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_DimRedux_Gauss.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_DimRedux_SparseSign.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_EIGSVD.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_EIGSVD_MatrixMatvec.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_Kernel.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_Sampler.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_ISVD_Primme.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_ISVD_MatrixMatvec.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_ISVD.cpp
-    ${CMAKE_SOURCE_DIR}/src/Skema_SketchySVD.cpp
-)
 
-# Add Kokkos
-# add_subdirectory(tpls/kokkos)
-# include_directories(${Kokkos_INCLUDE_DIRS_RET})
-# target_link_libraries(${PROJECT_NAME} kokkos)
-# Add KokkosKernels
-find_package(KokkosKernels REQUIRED)
-# add_subdirectory(tpls/kokkos-kernels)
-# include_directories(${KokkosKernels_INCLUD_DIRS_RET})
-target_link_libraries(${PROJECT_NAME} Kokkos::kokkoskernels)
+# Kokkos build options:
+#  - Inline build from tpls/kokkos
+#  - Link to external library from Kokkos_ROOT.
+if(Kokkos_ROOT)
+    set(KOKKOS_INLINE_BUILD OFF)
+else()
+    set(KOKKOS_INLINE_BUILD ON)
+endif()
+message(STATUS "Inline Kokkos build is ${KOKKOS_INLINE_BUILD}")
 
-# Add Lapack
+# KokkosKernels build options:
+#  - Inline build from tpls/kokkos-kernels
+#  - Link to external library from KokkosKernels_ROOT.
+if(KokkosKernels_ROOT)
+    set(KOKKOSKERNELS_INLINE_BUILD OFF)
+else()
+    set(KOKKOSKERNELS_INLINE_BUILD ON)
+endif()
+message(STATUS "Inline Kokkos-Kernels build is ${KOKKOSKERNELS_INLINE_BUILD}")
+
+if(Kokkos_ENABLE_OPENMP)
+    set(HAVE_OPENMP ON)
+endif()
+
+if(KOKKOS_INLINE_BUILD)
+    # Add Kokkos
+    add_subdirectory(tpls/kokkos)
+    set(HAVE_KOKKOS ON)
+else()
+    # Link against installed Kokkos
+    find_package(Kokkos REQUIRED)
+    message("-- Skema:  Using Kokkos:  ${Kokkos_CONFIG}")
+    set(HAVE_KOKKOS ON)
+endif()
+
+if(KOKKOSKERNELS_INLINE_BUILD)
+    # Add KokkosKernels
+    add_subdirectory(tpls/kokkos-kernels)
+    set(HAVE_KOKKOS_KERNELS ON)
+else()
+    find_package(KokkosKernels REQUIRED)
+    message("-- Skema:  Using KokkosKernels:  ${Kokkos_CONFIG}")
+    set(HAVE_KOKKOS_KERNELS ON)
+endif()
+
 find_package(LAPACKE REQUIRED)
 if(LAPACKE_FOUND)
     target_link_libraries(${PROJECT_NAME} ${LAPACKE_LIBRARIES})
@@ -50,14 +73,117 @@ if(LAPACKE_FOUND)
 endif()
 target_include_directories(${PROJECT_NAME} PRIVATE "/usr/include" "/usr/local/include")
 
+include_directories(
+    ${Kokkos_INCLUDE_DIRS_RET}
+    ${Skema_SOURCE_DIR}/src/
+    ${Skema_SOURCE_DIR}/driver/
+    ${Skema_SOURCE_DIR}/include/
+    ${Skema_SOURCE_DIR}/tpls/primme/include/
+)
+
+# Add PRIMME
+add_library(skema_primme_c STATIC
+    ${Skema_SOURCE_DIR}/src/eigs/auxiliary_eigs_normal.c
+    ${Skema_SOURCE_DIR}/src/eigs/auxiliary_eigs.c
+    ${Skema_SOURCE_DIR}/src/eigs/convergence.c
+    ${Skema_SOURCE_DIR}/src/eigs/correction.c
+    ${Skema_SOURCE_DIR}/src/eigs/factorize.c
+    ${Skema_SOURCE_DIR}/src/eigs/init.c
+    ${Skema_SOURCE_DIR}/src/eigs/inner_solve.c
+    ${Skema_SOURCE_DIR}/src/eigs/main_iter.c
+    ${Skema_SOURCE_DIR}/src/eigs/ortho.c
+    ${Skema_SOURCE_DIR}/src/eigs/primme_c.c
+    ${Skema_SOURCE_DIR}/src/eigs/primme_f77.c
+    ${Skema_SOURCE_DIR}/src/eigs/primme_interface.c
+    ${Skema_SOURCE_DIR}/src/eigs/restart.c
+    ${Skema_SOURCE_DIR}/src/eigs/solve_projection.c
+    ${Skema_SOURCE_DIR}/src/eigs/update_projection.c
+    ${Skema_SOURCE_DIR}/src/eigs/update_W.c
+    ${Skema_SOURCE_DIR}/src/linalg/auxiliary.c
+    ${Skema_SOURCE_DIR}/src/linalg/blaslapack.c
+    ${Skema_SOURCE_DIR}/src/linalg/cublas_wrapper.c
+    ${Skema_SOURCE_DIR}/src/linalg/magma_wrapper.c
+    ${Skema_SOURCE_DIR}/src/linalg/memman.c
+    ${Skema_SOURCE_DIR}/src/linalg/wtime.c
+    ${Skema_SOURCE_DIR}/src/svds/primme_svds_c.c
+    ${Skema_SOURCE_DIR}/src/svds/primme_svds_f77.c
+    ${Skema_SOURCE_DIR}/src/svds/primme_svds_interface.c
+)
+target_link_libraries(
+    skema_primme_c
+    ${LAPACK_LIBS} ${LAPACK_ADD_LIBS}
+)
+install(
+    TARGETS skema_primme_c
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    EXPORT skema
+)
+
+set(Skema_SOURCE_LIST
+    ${Skema_SOURCE_DIR}/src/Skema_AlgParams.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_DimRedux_Gauss.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_DimRedux_SparseSign.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_EIGSVD.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_EIGSVD_MatrixMatvec.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_Kernel.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_Sampler.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_ISVD_Primme.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_ISVD_MatrixMatvec.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_ISVD.cpp
+    ${Skema_SOURCE_DIR}/src/Skema_SketchySVD.cpp
+)
+
+add_library(skemalib ${Skema_SOURCE_LIST})
+target_link_libraries(skemalib Kokkos::kokkos)
+target_link_libraries(skemalib Kokkos::kokkoskernels)
+
+set(SKEMA_LINK_LIBS skemalib ${SKEMA_LIBS} ${LAPACK_LIBS} ${LAPACK_ADD_LIBS})
+install(
+    TARGETS skemalib
+    EXPORT skema
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+
+# Target definitions
+add_executable(skema
+    ${Skema_SOURCE_DIR}/driver/main.cpp
+)
+target_link_libraries(skema ${SKEMA_LINK_LIBS})
+install(TARGETS skema
+    EXPORT skema
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+
+# Add Kokkos
+# add_subdirectory(tpls/kokkos)
+# include_directories(${Kokkos_INCLUDE_DIRS_RET})
+# target_link_libraries(${PROJECT_NAME} kokkos)
+# # Add KokkosKernels
+# # find_package(KokkosKernels REQUIRED)
+# add_subdirectory(tpls/kokkos-kernels)
+# include_directories(${KokkosKernels_INCLUD_DIRS_RET})
+# target_link_libraries(${PROJECT_NAME} Kokkos::kokkoskernels)
+
+# Add Lapack
+# find_package(LAPACKE REQUIRED)
+# if(LAPACKE_FOUND)
+#     target_link_libraries(${PROJECT_NAME} ${LAPACKE_LIBRARIES})
+#     message(STATUS "Lapack libraries: ${LAPACKE_LIBRARIES}")
+#     get_target_property(${PROJECT_NAME} LAPACK::LAPACK INTERFACE_LINK_LIBRARIES)
+#     message(STATUS "LAPACK INTERFACE LINK LIBRARIES FROM TARGET: ${targetlib}")
+#     set(${LAPACK_LINKER_FLAGS} -llapacke -llapack -lblas)
+#     message(STATUS "Lapack linker flags: ${LAPACKE_LINKER_FLAGS}")
+# endif()
+# target_include_directories(${PROJECT_NAME} PRIVATE "/usr/include" "/usr/local/include")
+
 # Add PRIMME
 # add_library(primme SHARED IMPORTED)
 # set_target_properties(primme PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/tpls/primme/lib/libprimme.dylib )
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/src/)
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include/)
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/tpls/primme/include/)
-target_link_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/tpls/primme/lib/)
-target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/tpls/primme/lib/libprimme.a -llapack -lblas)
+# target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/src/)
+# target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include/)
+# target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/tpls/primme/include/)
+# target_link_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/tpls/primme/lib/)
+# target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/tpls/primme/lib/libprimme.a -llapack -lblas)
 # target_link_libraries(${PROJECT_NAME} primme -llapack -lblas)
 
 add_compile_options(-fsanitize=address)
