--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "tpls/primme"]
 	path = tpls/primme
 	url = https://github.com/jeremy-myers/primme.git
+	branch = eloy/index-conv-test-fun
 [submodule "tpls/kokkos"]
 	path = tpls/kokkos
 	url = https://github.com/kokkos/kokkos
